# Bob-the-blob

./: CMakeLists.txt  README.md  changes.txt  compileSourcesHowTo.txt
executables/game/: CMakeLists.txt
executables/game/sources/consts/: gameConsts.h
executables/game/sources/demoRecordAndRun/play/: playDemoContext.cpp  playDemoContext.h  playDemoMenu.cpp  playDemoMenu.h
executables/game/sources/demoRecordAndRun/record/: recordDemoContext.cpp  recordDemoContext.h  recordDemoMenu.cpp  recordDemoMenu.h
executables/game/sources/demoRecordAndRun/saveToFile/: saveToDemoFileMenu.cpp  saveToDemoFileMenu.h  saveToFileContext.cpp  saveToFileContext.h
executables/game/sources/gameStarting/: createRenderer.cpp  createRenderer.h  initializeSDL_Modules.cpp  initializeSDL_Modules.h  main.cpp  openLogsFiles.cpp  openLogsFiles.h  openPrefPath.cpp  openPrefPath.h  packageEssentials.cpp  packageEssentials.h
executables/game/sources/levelChoiceMenu/: levelChoiceMenuConsts.h  levelChoiceMenuContext.cpp  levelChoiceMenuContext.h  levelChoiceThings.cpp  levelChoiceThings.h  levelsListing.cpp  levelsListing.h  skillLevelCursorInterface.cpp  skillLevelCursorInterface.h  skillLevelTextsInterface.cpp  skillLevelTextsInterface.h
executables/game/sources/mainMenu/: mainMenuContext.cpp  mainMenuContext.h  mainMenuThings.cpp  mainMenuThings.h
executables/game/sources/miniScreenStart/: miniScreenStartContext.cpp  miniScreenStartContext.h  miniScreenStartMenu.cpp  miniScreenStartMenu.h
executables/game/sources/setupFiles/: createFoldersInPrefPath.cpp  createFoldersInPrefPath.h
libraries/commonFiles/: CMakeLists.txt
libraries/commonFiles/sources/consts/: colors.h  filesAndPaths.h  fontsSizes.h  includeOptions.h  levelsTypesConsts.h  playerInputsConsts.h  screenConsts.h  skillLevelsConsts.h  soundsConsts.h  squareSize.h
libraries/commonFiles/sources/exceptions/: readErrorExcept.cpp  readErrorExcept.h  writeErrorExcept.cpp  writeErrorExcept.h
libraries/commonFiles/sources/fileDataFetch/: fileDataFetch.cpp  fileDataFetch.h
libraries/commonFiles/sources/inputsConfig/: createJoystickFile.cpp  createJoystickFile.h  joystickInputsConfigData.cpp  joystickInputsConfigData.h  keyboardInputsConfig.cpp  keyboardInputsConfig.h
libraries/commonFiles/sources/levelInfos/: getGridSize.cpp  getGridSize.h
libraries/commonFiles/sources/package/: essentials.cpp  essentials.h  inputs.cpp  inputs.h
libraries/commonFiles/sources/pathsFunctions/: getLanguageFromFile.cpp  getLanguageFromFile.h  pathsFunctions.cpp  pathsFunctions.h
libraries/commonFiles/sources/sounds/: gameSoundSystem.cpp  gameSoundSystem.h  soundConfigFilesPaths.cpp  soundConfigFilesPaths.h
libraries/demos/: CMakeLists.txt
libraries/demos/sources/demos/consts/: dataRecordingConsts.h  demoConfigFilesConsts.h  demosConsts.h  gameEventsConsts.h
libraries/demos/sources/demos/data/: dataPackage.cpp  dataPackage.h  determineGameStatus.cpp  determineGameStatus.h  greenOrbDemosData.cpp  greenOrbDemosData.h  positionElements.cpp  positionElements.h  recordedInputsPlayerData.cpp  recordedInputsPlayerData.h  recordedMapElements.cpp
libraries/demos/sources/demos/dataToRecord/: actionData.cpp  gameEvents.cpp  gameEvents.h  itemData.cpp  itemData.h  moveAndPosition.cpp  moveAndPosition.h  playerMove.cpp  playerMove.h  soundPlaying.cpp  soundPlaying.h  startingPositions.cpp  startingPositions.h
libraries/demos/sources/demos/demosFiles/: demoConfigFiles.cpp  loadDataFromFile.cpp  loadDataFromFile.h  saveDataToFile.cpp  saveDataToFile.h
libraries/demos/sources/demos/templates/: demoStack.h  stacksAlgorithms.h
libraries/gameOptions/: CMakeLists.txt
libraries/gameOptions/sources/gameOptions/: optionsContext.cpp  optionsContext.h
libraries/gameOptions/sources/gameOptions/consts/: optionsConsts.h
libraries/gameOptions/sources/gameOptions/gameSettings/: gameSettingsContext.cpp  gameSettingsContext.h  gameSettingsInterface.cpp  gameSettingsInterface.h
libraries/gameOptions/sources/gameOptions/joystick/: joystickOptions.cpp  joystickOptions.h
libraries/gameOptions/sources/gameOptions/keyboard/: keyboardContext.cpp  keyboardContext.h  keyboardOptions.cpp  keyboardOptions.h
libraries/gameOptions/sources/gameOptions/mainMenu/: optionsMainMenuGraphisms.cpp  optionsMainMenuGraphisms.h
libraries/hintsScreens/: CMakeLists.txt
libraries/hintsScreens/sources/hints/fleeFoes/: fleeFoesHintScreenContext.cpp  fleeFoesHintScreenContext.h  fleeFoesHintScreenElements.cpp  fleeFoesHintScreenElements.h
libraries/hintsScreens/sources/hints/mainMenu/: hintsMainMenuContext.cpp  hintsMainMenuContext.h  hintsMainMenuElements.cpp  hintsMainMenuElements.h
libraries/inGame/: CMakeLists.txt
libraries/inGame/sources/levels/animation/: spriteAnimation.cpp  spriteAnimation.h
libraries/inGame/sources/levels/balloons/: balloonInfo.cpp  balloonInfo.h  balloonsPositionsData.cpp  balloonsPositionsData.h  updateBalloons.cpp  updateBalloons.h
libraries/inGame/sources/levels/benchmarks/: benchTypes.cpp  benchTypes.h  benchmarkObject.cpp  benchmarkObject.h  outputBenchmarkData.cpp  outputBenchmarkData.h
libraries/inGame/sources/levels/demos/: actWithDemoGameEvents.cpp  actWithDemoGameEvents.h  initializeDemoStacks.cpp  initializeDemoStacks.h  joinTimePoints.cpp  joinTimePoints.h  soundsEventsWithDemos.cpp  soundsEventsWithDemos.h  transferDemoStacks.cpp  transferDemoStacks.h  updateEnemiesWithDemoData.cpp  updateEnemiesWithDemoData.h  updatePlayerWithDemoData.cpp  updatePlayerWithDemoData.h
libraries/inGame/sources/levels/gameActors/: playerActorsConsts.h
libraries/inGame/sources/levels/gameContexts/: levelContext.cpp  levelContext.h  mexicanZone.cpp  mexicanZone.h
libraries/inGame/sources/levels/global/: actWithBonuses.cpp  actWithBonuses.h  gameGlobalObject.cpp  gameGlobalObject.h  levelMandatoryData.cpp  levelMandatoryData.h  mexicanGameGlobalObject.cpp  mexicanGameGlobalObject.h  updateGame.cpp  updateGame.h  updateProtagonistsMoves.cpp  updateProtagonistsMoves.h
libraries/joystickTests/: CMakeLists.txt
libraries/levelsHints/: CMakeLists.txt
(+198 files in other folders)
